--- a/chmhelp/html/mainview.htm
+++ b/chmhelp/html/mainview.htm
@@ -66,7 +66,7 @@
 
 		<p>Map Info [Ctrl+F] - displays a bit of information about the currently loaded tileset.</p>
 
-<!--	<p>Regen Occult [Ctrl+O] - to draw all the sprites in the viewer panel faster, any parts that are hidden beneath floors will be ignored, or occulted. But if you strip a floor off of a level above the ground floor this means you could be left looking into a big hole of what appears to be nothing. The tileparts are still there but they've been occulted for faster drawing. Use Regen Occult to make them appear as expected. Also mind that the reverse happens. If a floor is laid down above ground level, and MainView starts lagging, try issuing the Regen Occult command which will stop any sprites that have been hidden from drawing. Occulted tiles are re-calculated every time a Map loads.</p>-->
+<!--	<p>Regen Occult [Ctrl+O] - to draw all the sprites in the viewer panel faster, any parts that are hidden beneath floors will be ignored, or occulted. But if you strip a floor off of a level above the ground floor this means you could be left looking into a big hole of what appears to be nothing. The tileparts are still there but they've been occulted for faster drawing. Use Regen Occult to make them appear as expected. Also mind that the reverse happens. If a floor is laid down above ground level, and MainView starts lagging, try issuing the Regen Occult command which will stop any sprites that have been hidden from drawing. Occulted tiles are re-calculated every time a Map loads.</p> -->
 
 		<p>Quit [Ctrl+Q] - quits MapView II</p>
 
@@ -75,7 +75,8 @@
 
 		<p>Options [Ctrl+O] - opens and closes the Options for MainView. Descriptions for the entries appear at the bottom of that window.</p>
 
-		<p>Configurator - opens the Configuration Editor. This is where to specify or modify the paths to your XCOM installation folder(s) for UFO and/or TFTD. It can also replace your Maptree file with a fresh one that comes hardcoded. WARNING: doing that would obliterate all customizations that have been done to the Maptree. Alternately, the Configurator can generate a file of the hardcoded, or default tileset-data to a template file. The template could be useful if MapView II had been configured for UFO (or TFTD) and subsequently requires the data for TFTD (or UFO) tilesets. The default data can then be copied from the template into your <b>MapTilesets.yml</b> file. Note that the tileset-data for both games will exist in your MapTilesets configuration until the first time that the Maptree is saved, at which point the data for either game that is not configured will be erased. Hint: force a save of the Maptree to get the application to initialize a fraction of a second faster.</p>
+		<p>Configurator - opens the Configuration Editor. This is where to specify or modify the paths to your XCOM installation folder(s) for UFO and/or TFTD. It can also replace your Maptree file with a fresh one that comes hardcoded. WARNING: doing that would obliterate all customizations that have been done to the Maptree. Alternately, the Configurator can generate a file of the hardcoded, or default tileset-data to a template file. The template could be useful if MapView II had been configured for UFO (or TFTD) and subsequently requires the data for TFTD (or UFO) tilesets. The default data can then be copied from the template into your <b>MapTilesets.yml</b> file.</p>
+<!--	Note that the tileset-data for both games will exist in your MapTilesets configuration until the first time that the Maptree is saved, at which point the data for either game that is not configured will be erased. Hint: force a save of the Maptree to get the application to initialize a fraction of a second faster. -->
 
 		<br>
 		<h3>Viewers menu</h3>
