update help text

--- a/chmhelp/html/configuration.htm
+++ b/chmhelp/html/configuration.htm
@@ -25,7 +25,7 @@
 
 		<p>And copy any terrains that you'll be using in your Maps to \TERRAIN. Each terrain has three files: .PCK, .TAB, .MCD. Terrains, or terrainsets, are by default accessed from the basepath specified by the Configurator rather than any alternate basepath that may be specified for a tileset. That behavior can be overruled, however, in the Tileset Editor. Each terrain in a Tileset can be told to use its tileset's basepath instead; or it can be told to use a Custom basepath as long as its files (.PCK, .TAB, .MCD) are still in a folder labeled \TERRAIN.</p>
 
-		<p>Once the default basepath has been set with the Configurator, and you've set up the required subfolders, the Tileset Editor is accessed with a right-click in MainView's Map Tree. A context-menu is shown, and the operations that are available there depend on what tree-node has been selected with a left-click. Note that right-clicking the Map Tree does not select a tree-node - the node must be left-clicked first.</p>
+		<p>Once the default basepath has been set with the Configurator, and you've set up the required subfolders, the Tileset Editor is accessed with a right-click in MainView's Map Tree. A context-menu is shown, and the operations that are available there depend on what tree-node has been selected with a left-click. Note that right-clicking the Map Tree does not select a tree-node - the node you wish to alter must be left-clicked first.</p>
 
 		<p>Lastly, please pay attention to the text and mouseover tips shown in the Configuration Editor as well as in the Tileset Editor.</p>
 		<br>
