--- a/chmhelp/html/overview.htm
+++ b/chmhelp/html/overview.htm
@@ -27,7 +27,7 @@
 
 		<p>MapView directly creates or edits the Map-files, the Route-files, and which terrains are used in any tileset.</p>
 
-		<p>It does *not* directly edit Pck-files, Tab-files, or Mcd-files. Pck-files contain sprites and a Pck-file is a spriteset. Tab-files contain indices into its corresponding spriteset for the retrieval of a specific sprite to display a tilepart. Mcd-files contain records of tilepart characteristics, such as whether a particular tilepart is passable, explosive, blocks fire from spreading, and about 60 other things.</p>
+		<p>It does *not* directly edit Pck-files, Tab-files, or Mcd-files. Pck-files contain sprites and a Pck-file is a spriteset. Tab-files contain indices into its corresponding spriteset for the retrieval of a specific sprite to display as a tilepart. Mcd-files contain records of tilepart characteristics, such as whether a particular tilepart is passable, explosive, blocks fire from spreading, and about 60 other things.</p>
 
 		<p>That's almost inarguably what makes XCOM battles so great. The permutations of the ways in which tileparts go together to make tilesets is what MapView is all about.</p>
 
