--- a/chmhelp/html/tileview.htm
+++ b/chmhelp/html/tileview.htm
@@ -6,10 +6,10 @@
 		<h2>TileView</h2>
 		<img src="../png/tileview.png" />
 
-		<p>The viewer panel shows all the tileparts that are available for placement in the currently loaded tileset.</p>
+		<p>The viewer panel shows all the tileparts that are available for placement in the currently loaded tileset's terrainset.</p>
 
 		<p>The five tabs along the top show pages that contain the tileparts according to their types.<br><br>
-&nbsp;&nbsp;All - shows all types available<br>
+&nbsp;&nbsp;All - shows all parts available<br>
 &nbsp;&nbsp;Floors - shows only floor parts<br>
 &nbsp;&nbsp;West Walls - shows only the westwall parts<br>
 &nbsp;&nbsp;North Walls - shows only the northwall parts<br>
@@ -23,7 +23,7 @@
 
 		<p>Double right-click on a tilepart to open and close a readonly display of the currently selected tilepart's MCD record.</p>
 
-		<p>The titlebar of the viewer shows the currently selected tilepart's MapId, which is its position in the array of all terrains used by the current Map, and its McdId, which is its position in its own terrain, along with the label of the MCD file that contains the tilepart's record.</p>
+		<p>The titlebar of the viewer shows the label of the MCD file that contains the tilepart's record, and its terrain ID, which is its position in its terrain list, along with the currently selected tilepart's terrainset ID, which is its position in the array of all terrains used by the current Map.</p>
 
 		<br>
 		<p>The menus along the top of the viewer access</p>
