--- a/chmhelp/html/topview.htm
+++ b/chmhelp/html/topview.htm
@@ -20,11 +20,11 @@
 
 		<p>Left-click to select a tile to edit, and a left-click drag motion will select multiple tiles over a rectangular area.</p>
 
-		<p>Right-click places the currently selected tilepart from TileView into the tilepart type-slot along the bottom of the viewer, respecting the clicked tile position on the 2-dimensional grid and the currently selected tilepart-type shown beneath the grid.</p>
+		<p>Right-click places the currently selected tilepart from TileView into its proper tilepart type-slot along the bottom of the viewer, respecting the clicked tile position on the 2-dimensional grid and the currently selected tilepart-type shown beneath the grid.</p>
 
 		<p>The bottom of the panel displays the four tilepart type-slots into which parts may be placed. The currently selected type-slot has a light blue background.</p>
 
-		<p>Left-click selects that type-slot as ready to have a tilepart placed into it.</p>
+		<p>Left-click selects that type-slot as ready to have a tilepart assigned to it.</p>
 
 		<p>Double left-click will select the tilepart that's currently in the slot in TileView.</p>
 
